# test-llvm-plugins

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  testPlugin.cpp
src/: bb_modification_plugin.cpp  demo.cpp  demo.h  print_bb_length_plugin.cpp  second_plugin.cpp  testPlugin.cpp  third_plugin.cpp
tests/c/: linpack.bc  linpack.c  linpack.dbg.ll  linpack_O0.dbg.ll  linpack_O1.dbg.ll  linpack_O2.dbg.ll  linpack_O3.dbg.ll
